[gd_scene load_steps=13 format=3 uid="uid://puxejj1005j1"]

[ext_resource type="Material" uid="uid://dvyms376jliuo" path="res://materials/dissolve_material.tres" id="1_0u4sm"]
[ext_resource type="PackedScene" uid="uid://dypabr7c0m2n2" path="res://prefabs/generic_shadow.tscn" id="1_1wh4j"]
[ext_resource type="Script" path="res://scripts/LimitDistanceToTarget.gd" id="2_0s7w4"]
[ext_resource type="Script" path="res://scripts/TargetManager.gd" id="2_7mlqs"]
[ext_resource type="Texture2D" uid="uid://cy7xhoobn4611" path="res://assets/Karen_Top.png" id="2_b251j"]
[ext_resource type="Script" path="res://scripts/MoveTowardsTarget.gd" id="2_scquu"]
[ext_resource type="PackedScene" uid="uid://nip75bkwf31j" path="res://prefabs/small_experience.tscn" id="5_sg4ip"]
[ext_resource type="PackedScene" uid="uid://btjpjbvbo5wh5" path="res://prefabs/health_component.tscn" id="6_438ms"]
[ext_resource type="Script" path="res://scripts/EnemyOnDeath.gd" id="7_6byaq"]
[ext_resource type="Script" path="res://scripts/TouchDamageOverTime.gd" id="9_pdrpy"]
[ext_resource type="AudioStream" uid="uid://0d4p6i0raf3w" path="res://assets/enemy_hit.ogg" id="10_6nb50"]

[sub_resource type="CircleShape2D" id="CircleShape2D_n2n35"]
radius = 25.0

[node name="PlaceholderEnemy" type="Area2D"]
collision_mask = 2

[node name="GenericShadow" parent="." instance=ExtResource("1_1wh4j")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_n2n35")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 5
material = ExtResource("1_0u4sm")
position = Vector2(2, 3)
rotation = -1.0909
scale = Vector2(0.05, 0.05)
texture = ExtResource("2_b251j")

[node name="TargetManager" type="Node" parent="."]
script = ExtResource("2_7mlqs")

[node name="LimitDistanceToTarget" type="Node" parent="."]
script = ExtResource("2_0s7w4")

[node name="MoveTowardsTarget" type="Node" parent="."]
script = ExtResource("2_scquu")

[node name="HealthComponent" parent="." instance=ExtResource("6_438ms")]

[node name="EnemyOnDeath" type="Node" parent="."]
script = ExtResource("7_6byaq")
spawn_on_death = ExtResource("5_sg4ip")

[node name="TouchDamageOverTime" type="Node" parent="."]
script = ExtResource("9_pdrpy")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_6nb50")

[node name="AudioListener2D" type="AudioListener2D" parent="AudioStreamPlayer2D"]
current = true
